--- a/public/style.css
+++ b/public/style.css
@@ -4,17 +4,34 @@
     box-sizing: border-box;
 }
 body{
-    background-color: black;
+    background: url(./images/city\ background.png);
+    opacity: .9;
+    color: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 .app-container{
-    background-color: cadetblue;
+    background-color: rgb(43, 43, 180);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 400px;
-    height: 600px;
+    height: 90px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    margin-top: 100px;
+    transition:  height .6s ease;
+
 }
 
+
+
 input[type = text]{
-    width: 600px;
+    width: 390px;
     height: 50px;
     outline: 0;
     border: 2px solid white;
@@ -26,13 +43,14 @@ input[type = text]{
     padding-left: 30px;
     color: black;
     text-transform:uppercase;
+    color: white;
 }
 ::placeholder{
     color: white;
 }
 
 .search-input-text{
-    max-width: 500px;
+    max-width: 400px;
     display: flex;
     align-items: center;
     padding: 25px 0 0 30px;
@@ -58,12 +76,55 @@ button{
 .humidity, .wind-speed{
     display: flex;
     align-items: center;
-    gap: 60px;
+    gap: 40px;
+    
 }
 .weather{
     display: flex;
     flex-direction: column;
     gap: 40px;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 30px;
+}
+
+.weather-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.date{
+    font-size: 1.1em;
+    position: relative;
+    top: 20px;
+   
+}
+.location{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    position: relative;
+    right: 20px;
+    margin-top: 20px;
+    
+}
+.location p{
+   font-size: .8em;
+   text-transform: uppercase;
+
+}
+.weather-img{
+    width: 200px;
+    margin-top: 10px;
+
+}
+.error_state{
+    position: absolute;
+    visibility: hidden;
+    top: 25%;
+}
+.error-img{
+    border-radius: 50%;
+}
+.error-active{
+    visibility: visible;
 }
